cmake_minimum_required(VERSION 3.26)
project(Oops_Notes_by_Harshit_Singla)

set(CMAKE_CXX_STANDARD 14)

include_directories(ST1/C++/6_September)

add_executable(Oops_Notes_by_Harshit_Singla
        ST1/C/17_August/bit_fields.c
        ST1/C/17_August/Stringize.c
        ST1/C/18_August/enum.c
        ST1/C/18_August/stringcompression.c
        ST1/C/18_August/union.c
        ST1/C/1_September/InfixToPostFix_Evaluation.c
        ST1/C/1_September/InfixToPrefix_Evaluation.c
        ST1/C/21_August/file_handling.c
        ST1/C/21_August/file_read_write_append.c
        ST1/C/22_August/Questions/1.c
        ST1/C/22_August/Questions/2.c
        ST1/C/22_August/Questions/3.c
        ST1/C/22_August/file_plus.c
        ST1/C/22_August/file_read_write_in_binary.c
        ST1/C/22_August/file_rename.c
        ST1/C/22_August/file_storing_integer.c
        ST1/C/23_August/function_pointers.c
        ST1/C/23_August/inline_function.c
        ST1/C/23_August/pointers.c
        ST1/C/25_August/qsort.c
        ST1/C/25_August/stack.c
        ST1/C/26_August/parenthsesis.c
        ST1/C/26_August/ques.c
        ST1/C/27_August/postFix.c
        ST1/C/30_August/questions_list.c
        ST1/C/31_August/intopostfix.c
        ST1/C/31_August/intoPreFix.c
        ST1/C/4_September/circular_queue.c
        ST1/C/4_September/memory_allocation.c
        ST1/C/4_September/queue.c
        ST1/C/5_July/conditional.c
        ST1/C/5_July/error.c
        ST1/C/5_July/macros.c
        ST1/C/5_July/pragma.c
        ST1/C/5_July/predefnied_macro.c
        ST1/C/5_July/struct.c
        ST1/C/5_July/typedef.c
        ST1/C/6_July/embeddedNesting.c
        ST1/C/6_July/nestedStructure.c
        ST1/C/6_July/ques.c
        ST1/C/6_July/structureinFunction.c
        ST1/C/6_July/structurePointers.c
        ST1/C/7_July/passArraybyValue.c
        ST1/C/7_July/selfReferencingStructure.c
        ST1/C/7_July/strutureMemberAlignement.c
        ST1/C++/5_September/Encapsulation.cpp
        ST1/C++/5_September/Overloading.cpp
        ST1/C++/6_September/count_alphabets.cpp
        ST1/C++/6_September/harshit.h
        ST1/C++/6_September/intro_contd.cpp
        ST1/C++/6_September/largest.cpp
        ST1/C++/6_September/prepro.cpp
        ST1/C++/6_September/second_largest.cpp
        ST1/C++/7_September/doWhileLoop.cpp
        ST1/C++/7_September/forLoop.cpp
        ST1/C++/7_September/goToStatement.cpp
        ST1/C++/7_September/print_All_Digits_in_Number.cpp
        ST1/C++/7_September/question_Switch.cpp
        ST1/C++/7_September/reverseNumber.cpp
        ST1/C++/7_September/switch_case.cpp
        ST1/C++/7_September/whileLoop.cpp
        ST1/C++/8_September/Methods_and_Members.cpp
        ST1/C++/8_September/pascal_triangle.cpp
        ST1/C++/8_September/Structs_vs_Classes.cpp
        ST2/11_September/Arrays.cpp
        ST2/11_September/Arrays2.cpp
        ST2/11_September/bubble_sort.cpp
        ST2/11_September/find_minimum.cpp
)
